--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=95a99a9d874d05b4d14113338668444a
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://symfony:Symfony@123@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
